# data-agent

./: .env_example  .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md  pyproject.toml
.opencode/agents/: active-learning.md  annotation.md  data-collection.md  data-quality.md  orchestrator.md
.opencode/skills/active-learning/: SKILL.md
.opencode/skills/active-learning/scripts/: template_train_classifier.py  template_uncertainty.py  template_visualize.py
.opencode/skills/data-annotation/: SKILL.md
.opencode/skills/data-annotation/scripts/: template_labelstudio.py  template_sample.py
.opencode/skills/data-collection/: SKILL.md
.opencode/skills/data-collection/scripts/: download_huggingface.py  download_kaggle.py  search_huggingface.py  search_kaggle.py  template_call_api.py  template_scrape_web.py
.opencode/skills/data-quality/: SKILL.md
.opencode/skills/data-quality/scripts/: template_duplicates.py  template_impute_missing.py  template_missing_values.py  template_outliers_iqr.py  template_read_data.py  template_text_quality.py
TODOs/: todo_active_learning.md  todo_annotation.md  todo_data_collection.md  todo_data_quality.md  todo_orchestrator.md  todo_text_classification_focus.md
src/: models.py
tests/: test_data_annotation.py  test_data_collection.py  test_data_quality.py
